--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ members = [
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/zoo/qsim"
+license = "MIT"
+repository = "https://github.com/radevgit/qsim"
 keywords = ["power-grid", "simulation", "power-flow", "electrical"]
 categories = ["simulation", "science"]
 
