Fix readme references

--- a/crates/qsim-core/Cargo.toml
+++ b/crates/qsim-core/Cargo.toml
@@ -3,6 +3,8 @@ name = "qsim-core"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
+readme = "../../README.md"
 description = "Core engine, traits, and state management for qsim"
 
 [dependencies]
