--- a/crates/qsim-solvers/Cargo.toml
+++ b/crates/qsim-solvers/Cargo.toml
@@ -3,6 +3,8 @@ name = "qsim-solvers"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
+readme = "../../README.md"
 description = "Power flow solvers (DC, AC) for qsim"
 
 [dependencies]
