--- a/qsim/Cargo.toml
+++ b/qsim/Cargo.toml
@@ -3,6 +3,8 @@ name = "qsim"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
+readme = "../README.md"
 description = "Power grid modeling and simulation library"
 keywords = ["power-grid", "simulation", "power-flow", "electrical"]
 categories = ["simulation", "science"]
