--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/radevgit/qsim"
+readme = "README.md"
 keywords = ["power-grid", "simulation", "power-flow", "electrical"]
 categories = ["simulation", "science"]
 
